Add Mixin and edit Readme.md

--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -6,6 +6,8 @@
 //=== === ===
 // Our SASS Files
 @import "includes/varibles";
+@import "includes/mixins";
+@import "includes/stack";
 // Some Styles...
 body {
   width: 100%;
